updated index.html and navbar

--- a/src/main/resources/templates/createCustomer.html
+++ b/src/main/resources/templates/createCustomer.html
@@ -22,8 +22,9 @@
                         Bokningshantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
-                        <a class="dropdown-item" href="/book">Sök lediga rum</a>
+                        <a class="dropdown-item" href="/book">Boka rum</a>
                         <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
+                        <a class="dropdown-item" href="">Alla rum</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -31,11 +32,10 @@
                         Kundhantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
-                        <a class="dropdown-item" href="/customer/search">Ändra kund</a>
+                        <a class="dropdown-item" href="/customer/search">Sök kund</a>
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                     </div>
-
                 </li>
             </ul>
         </div>
