--- a/src/main/resources/templates/searchAvailabilityResult.html
+++ b/src/main/resources/templates/searchAvailabilityResult.html
@@ -21,8 +21,9 @@
                         Bokningshantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
-                        <a class="dropdown-item" href="/book">Sök lediga rum</a>
+                        <a class="dropdown-item" href="/book">Boka rum</a>
                         <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
+                        <a class="dropdown-item" href="">Alla rum</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -30,11 +31,10 @@
                         Kundhantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
-                        <a class="dropdown-item" href="/customer/search">Ändra kund</a>
+                        <a class="dropdown-item" href="/customer/search">Sök kund</a>
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                     </div>
-
                 </li>
             </ul>
         </div>
@@ -110,11 +110,9 @@
                                 </td>
                             </tr>
                         </th:block>
-
                     </table>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
