--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,7 +21,8 @@
 .navbar {
     background-color: #007bff;
     backdrop-filter: blur(10px);
-    height: 80px;
+    height: 90px;
+    border-radius: 10px
 }
 .navbar-brand {
     color: #fff;
@@ -44,8 +45,9 @@
 
 /* Index */
 .btn-lg {
-    padding: 5px 160px;
-    font-size: 1.5rem;
+    padding: 10px 100px;
+    font-size: 2.5rem;
+    font-family: "sans-serif", Serif;
 }
 .container-index {
     border: 2px solid #007bff;
@@ -74,13 +76,13 @@
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid #007bff; /* Lägg till en solid blå ram */
+    border: 1px solid #007bff;
 }
 
 .customer-details h2 {
     color: #333;
-    border-bottom: 2px solid #007bff; /* Lägg till en blå ram under rubriken */
-    padding-bottom: 30px; /* Lägg till lite utrymme under rubriken */
+    border-bottom: 2px solid #007bff;
+    padding-bottom: 30px;
 }
 
 .customer-details p {
