--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/">Startsida</a>
+        <a class="navbar-brand" href="/"><i>Startsida</i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,8 +22,9 @@
                         Bokningshantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
-                        <a class="dropdown-item" href="/book">Sök lediga rum</a>
+                        <a class="dropdown-item" href="/book">Boka rum</a>
                         <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
+                        <a class="dropdown-item" href="">Alla rum</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -31,11 +32,10 @@
                         Kundhantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
-                        <a class="dropdown-item" href="/customer/search">Ändra kund</a>
+                        <a class="dropdown-item" href="/customer/search">Sök kund</a>
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                     </div>
-
                 </li>
             </ul>
         </div>
