--- a/src/main/resources/templates/contractCustomerInfo.html
+++ b/src/main/resources/templates/contractCustomerInfo.html
@@ -25,7 +25,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
                         <a class="dropdown-item" href="/book">Boka rum</a>
                         <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
-                        <a class="dropdown-item" href="">Alla rum</a>
+                        <a class="dropdown-item" href="/rooms">Alla rum</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
