--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -55,6 +55,7 @@
     padding: 40px;
     max-width: 700px;
     margin: 10px auto auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .btn-group {
     display: flex;
@@ -72,7 +73,6 @@
 
 /* Contract customer info */
 .customer-details {
-    background-color: #f2f2f2;
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
