--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bokningshantering</title>
+    <link rel="shortcut icon" th:href="@{/images/favicon.ico}" type="favicon.ico">
     <!-- Lägg till Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
