--- a/src/main/resources/templates/roomEvent.html
+++ b/src/main/resources/templates/roomEvent.html
@@ -82,7 +82,7 @@
     </div>
    <div th:if="${#lists.isEmpty(events)}">
        <div class="alert alert-danger text-center" role="alert">Ingen aktivitet registrerad på detta rum</div>
-       <a class="btn btn-success" href="/" role="button">Gå tillbaka</a>
+       <a class="btn btn-success" href="/rooms" role="button">Gå tillbaka</a>
    </div>
 </div>-->
 </body>
