Controllers for reseting password added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
     <div><label> Email: <br><input type="text" name="username"/> </label></div>
     <div><label> Lösenord: <br><input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Logga in"/></div>
-    <a href="">Glömt lösenord?</a>
+    <a href="/forgotPassword">Glömt lösenord?</a>
 </form>
 </body>
 </html>
