Expiry time added for reset password tokens

--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -23,6 +23,7 @@
 </div>
 <div th:unless="${error == null}">
   <p th:text="${error}"></p>
+  <a href="/login" class="btn" >Gå till start.</a>
 </div>
 
 </body>
