--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -35,6 +35,13 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
                         <a class="dropdown-item" href="/customer/search">Sök kund</a>
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
+                    </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
+                        <a class="dropdown-item" href="/admin/templates">Alla mallar</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                     </div>
                 </li>
