--- a/src/main/resources/templates/editHtml.html
+++ b/src/main/resources/templates/editHtml.html
@@ -9,49 +9,9 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="/"><i>Startsida</i></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Bokningshantering
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
-                        <a class="dropdown-item" href="/book">Boka rum</a>
-                        <a class="dropdown-item" href="/bookings/search">Sök bokningar</a>
-                        <a class="dropdown-item" href="/rooms">Alla rum</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Kundhantering
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
-                        <a class="dropdown-item" href="/customer/search">Sök kund</a>
-                        <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
-                    </div>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Admin
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
-                        <a class="dropdown-item" href="/admin/templates">Alla mallar</a>
-                        <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
 <div class="container-email container mt-4">
     <h1 th:text="${emailTemplate.id == null} ? 'Lägg till ny mall' : 'Redigera mall'"></h1>
-    <form th:action="@{/admin/templates/save}" th:object="${emailTemplate}" method="post">
+    <form id="editForm" th:action="@{/admin/templates/update/{id}(id=${emailTemplate.id})}" th:object="${emailTemplate}" method="post">
         <div class="form-group form-container">
             <label for="name"><strong>Namn:</strong></label>
             <input type="text" id="name" class="form-control" th:field="*{name}" placeholder="Ange mallens namn" required>
