--- a/src/main/resources/templates/emailTemplates/bookingEmailConfirmation.html
+++ b/src/main/resources/templates/emailTemplates/bookingEmailConfirmation.html
@@ -21,33 +21,25 @@
             background-color: #ffffff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .logo {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        .logo img {
-            max-width: 150px;
-        }
         h1 {
             text-align: center;
             margin-bottom: 20px;
-            color: #444; /* Darker gray */
+            color: #444;
         }
         h2 {
             margin-top: 30px;
             margin-bottom: 10px;
-            color: #444; /* Darker gray */
-            border-bottom: 2px solid #007bff; /* Blue underline */
+            color: #444;
+            border-bottom: 2px solid #007bff;
             padding-bottom: 5px;
         }
         p {
             margin-bottom: 10px;
-            color: #666; /* Medium gray */
+            color: #666;
         }
         .highlight {
             font-weight: bold;
-            color: #007bff; /* Blue */
+            color: #007bff;
         }
         .contact {
             text-align: center;
@@ -56,7 +48,7 @@
             border-top: 1px solid #ddd;
         }
         .contact a {
-            color: #007bff; /* Blue */
+            color: #007bff;
             text-decoration: none;
         }
         .contact a:hover {
@@ -65,8 +57,8 @@
         .cancellation-policy {
             margin-top: 20px;
             padding: 15px;
-            border: 1px solid #f1c40f; /* Yellow border */
-            background-color: #fdf8e4; /* Light yellow background */
+            border: 1px solid #f1c40f;
+            background-color: #fdf8e4;
             border-radius: 5px;
         }
     </style>
