--- a/src/main/resources/templates/templatePreview.html
+++ b/src/main/resources/templates/templatePreview.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-postförhandsvisning</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styleEmail.css}" href="/css/styleEmail.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" href="/css/style.css">
 </head>
 <body>
+<div>
 <!-- Visa HTML-innehållet från mallen -->
 <div th:utext="${htmlContent}"></div>
+</div>
 </body>
 </html>
 
