--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,6 +43,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
                         <a class="dropdown-item" href="/admin/templates">Alla mallar</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
+                        <a class="dropdown-item" href="/userAccounts">User admin</a>
                     </div>
                 </li>
             </ul>
