--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -4,74 +4,7 @@
   <meta charset="UTF-8">
   <title>Ändra lösenord</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      height: 100vh;
-      position: relative;
-    }
-    .container {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 40px;
-      border-radius: 10px;
-      border: 2px solid rgba(39, 74, 239, 0.33);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-      width: 100%;
-      max-width: 500px;
-      text-align: center;
-    }
-    .container h1 {
-      margin-bottom: 30px;
-      font-size: 28px;
-      color: #333;
-    }
-    input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    input[type="submit"] {
-      width: 100%;
-      padding: 10px;
-      background-color: #007bff;
-      border: none;
-      border-radius: 4px;
-      color: #fff;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    input[type="submit"]:hover {
-      background-color: #0056b3;
-    }
-    .error {
-      color: #dc3545;
-      margin-bottom: 10px;
-    }
-    .btn {
-      display: block;
-      text-align: center;
-      text-decoration: none;
-      color: #007bff;
-      margin-top: 10px;
-    }
-    .btn:hover {
-      text-decoration: underline;
-    } .backToStart a {
-        text-decoration: none;
-        color: #007bff;
-      }
-    .backToStart a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/resetPassword.css}" href="/css/resetPassword.css">
 </head>
 <body>
 <div class="container">
