--- a/src/main/resources/templates/userAccount.html
+++ b/src/main/resources/templates/userAccount.html
@@ -72,34 +72,37 @@
             </div>
         </form>
     </div>
-    <div th:if="${user}">
+    <div th:if="${hasSearched}">
+        <div th:if="${userExists}">
 
-        <h1 class="text-center mb-5 mt-5"> Ändra användare</h1>
+            <h1 class="text-center mb-5 mt-5"> Ändra användare</h1>
 
-
-        <form action="/user/update" method="post">
-
-            <input type="hidden" name="id" th:value="${user.getId()}">
-            <div class="form-group">
-                <label for="username">Användarnamn:</label>
-                <input type="text" class="form-control" id="username" name="username" th:value="${user.getUsername()}">
-            </div>
-            <div class="d-flex flex-row justify-content-center">
-                <div class="d-flex ">
-                    <label for="admin">Admin:</label>
-                    <input type="checkbox"  id="admin" name="admin" th:checked="${user.isAdmin()}">
+            <form action="/user/update" method="post">
+                <input type="hidden" name="id" th:value="${user.getId()}">
+                <div class="form-group">
+                    <label for="username">Användarnamn:</label>
+                    <input type="text" class="form-control" id="username" name="username"
+                           th:value="${user.getUsername()}">
                 </div>
-                <div class="d-flex">
-                    <label for="receptionist">Receptionist:</label>
-                    <input type="checkbox"  id="receptionist" name="receptionist" th:checked="${user.isReceptionist()}">
+                <div class="d-flex flex-row justify-content-center">
+                    <div class="d-flex ">
+                        <label for="admin">Admin:</label>
+                        <input type="checkbox" id="admin" name="admin" th:checked="${user.isAdmin()}">
+                    </div>
+                    <div class="d-flex">
+                        <label for="receptionist">Receptionist:</label>
+                        <input type="checkbox" id="receptionist" name="receptionist"
+                               th:checked="${user.isReceptionist()}">
+                    </div>
                 </div>
-            </div>
 
-            <button type="submit" class="btn btn-primary">Ändra</button>
-            <a href="/user" class="btn btn-danger">Avbryt</a>
-        </form>
+                <button type="submit" class="btn btn-primary">Ändra</button>
+                <a href="/user" class="btn btn-danger">Avbryt</a>
+            </form>
+        </div>
+        <div th:unless="${userExists}">
+            <div class="alert alert-warning text-center" role="alert" th:text="${message}"></div>
+        </div>
     </div>
-
-
 </div>
 </body>
